# bunpy-ssr-react

./: .gitignore  MANIFEST.in  README.md  main.py  pyproject.toml  setup.py
bunssr/: __init__.py  client.py  postinstall.py  react_render.py  runtime.py
bunssr.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
bunssr/server/: index.ts  package.json
