[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bunssr"
version = "0.1.0"
description = "A Python bridge to Bun for SSR"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["pycurl"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
react = []

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
